kubernetes/deployment.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: current-projects
  namespace: current-projects
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: current-projects
    spec:
      containers:
        - image: informaticslab/current-projects:latest
          imagePullPolicy: Always
          name: current-projects
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
