kubernetes/ingress.yaml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: currentprojects.informaticslab.co.uk
  namespace: current-projects
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - currentprojects.informaticslab.co.uk
    secretName: current-projects-tls
  rules:
  - host: currentprojects.informaticslab.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: current-projects
          servicePort: 80
